--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
+async-timeout==4.0.3
 Django==4.2.6
+django-cors-headers==4.3.0
 djangorestframework==3.14.0
 flake8==6.1.0
 mccabe==0.7.0
@@ -8,5 +10,6 @@ pycodestyle==2.11.1
 pyflakes==3.1.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
+redis==5.0.1
 sqlparse==0.4.4
 typing_extensions==4.8.0
