--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.1.0
 PyJWT==2.8.0
+pyTelegramBotAPI==4.14.0
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -38,6 +39,7 @@ redis==5.0.1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
+telebot==0.0.5
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
